--- a/config.yaml
+++ b/config.yaml
@@ -37,6 +37,22 @@ scan_remotes:
   - "anime"
   - "kdrama"
 
+# Source folders to scan within remotes (messy uploads go here)
+# Files from these folders will be organized to root level
+source_folders:
+  movies: "files"
+  movies1: "files"
+  tvshows: "files"
+  anime: "files"
+  kdrama: "files"
+
+# Destination folders for organized content
+destination_folders:
+  movie: "Movies"
+  tvshow: "TV Shows"
+  anime: "Anime"
+  kdrama: "K-Drama"
+
 # Scan settings
 scan:
   interval_minutes: 5
