Initial commit: Media File Organizer for Jellyfin

--- a/config.yaml
+++ b/config.yaml
@@ -56,8 +56,8 @@ destination_folders:
 
 # Scan settings
 scan:
-  interval_minutes: 5
-  stability_check_seconds: 120  # 2 minutes - file must be unchanged
+  interval_minutes: 2
+  stability_check_seconds: 60  # 1 minute - file must be unchanged
   run_on_startup: true
 
 # Quality settings (higher index = higher priority)
