--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       - TMDB_API_KEY=${TMDB_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
-      - SCAN_INTERVAL=3600
+      - SCAN_INTERVAL=120
+      - RUN_ON_STARTUP=true
       - DRY_RUN=false
       - LOG_LEVEL=INFO
     volumes:
