--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     environment:
       - TMDB_API_KEY=${TMDB_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY:-}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - SCAN_INTERVAL=120
       - RUN_ON_STARTUP=true
