--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - TMDB_API_KEY=${TMDB_API_KEY}
       - GROQ_API_KEY=${GROQ_API_KEY:-}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - USE_AI_FALLBACK=false
       - SCAN_INTERVAL=120
       - RUN_ON_STARTUP=true
       - DRY_RUN=false
